-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.0
-
None
-
Cross compilation using buildroot
-
5cc734e0a3e941f866af6e234fe1e36939044110
Compilation of forkd fail with uClibc due to the lack of eventfd
Proposed patch attached to this mail
| For Gerrit Dashboard: QTBUG-47337 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 121988,3 | forkfd: Fix build with uClibc <= 0.9.33 | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |